fix layout on small screens

--- a/static/css/lista.css
+++ b/static/css/lista.css
@@ -1,10 +1,15 @@
+@media (min-width: 768px) {
+    .event .date {
+        padding-top: 7px;
+        text-align: right;
+    }
+}
+
 .event {
     margin-bottom: 30px;
 }
 
 .event .date {
-    text-align: right;
-    padding-top: 7px;
     font-size: 30px;
     font-weight: bold;
 }
